Changed host fqdn

--- a/hostcreate.yml
+++ b/hostcreate.yml
@@ -1,13 +1,19 @@
 ---
 - name: Playbook that Creates hosts in Satellite using the Ansible Foreman Modules
   hosts: localhost
+  vars:
+    sat_username: "admin"
+    sat_password: "redhat"
+    sat_url: "https://satellite6.testlab.org"
+    host_fqdn: 
+
   tasks:
   - name: Create a host in Satellite6
     theforeman.foreman.foreman_host:
-      username: "admin"
-      password: "redhat"
-      server_url: "https://satellite6.testlab.org"
-      name: "testy.testlab.org"
+      username: "{{ sat_username }}"
+      password: "{{ sat_password }}"
+      server_url: "{{ sat_url }}"
+      name: "{{ host_fqdn }}"
       hostgroup: "RHEL7_Dev"
       organization: "RedHat"
       location: "RDU"
@@ -17,9 +23,9 @@
 
   - name: Power on the built host
     theforeman.foreman.foreman_host_power:
-      username: "admin"
-      password: "redhat"
-      server_url: "https://satellite6.testlab.org"
-      hostname: "testy.testlab.org"
+      username: "{{ sat_username }}"
+      password: "{{ sat_password }}"
+      server_url: "{{ sat_url }}"
+      hostname: "{{ host_fqdn }}"
       state: on
       validate_certs: no
