--- a/hostdelete.yml
+++ b/hostdelete.yml
@@ -9,7 +9,7 @@
 
   tasks:
   - name: Power off the built host
-    theforeman.foreman.foreman_host_power:
+    redhat.satellite.host_power:
       username: "{{ sat_username }}"
       password: "{{ sat_password }}"
       server_url: "{{ sat_url }}"
@@ -18,7 +18,7 @@
       validate_certs: no
 
   - name: Delete a host in Satellite6
-    theforeman.foreman.foreman_host:
+    redhat.satellite.host:
       username: "{{ sat_username }}"
       password: "{{ sat_password }}"
       server_url: "{{ sat_url }}"
